@@ -11,10 +11,11 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import parser.Parser;
 import parser.program_components.CodeBlock;
-import parser.program_components.FunctionDef;
-import parser.program_components.Parameter;
 import parser.program_components.Program;
 import parser.program_components.data_values.IntValue;
+import parser.program_components.function_definitions.BoolFunctionDef;
+import parser.program_components.parameters.IntParameter;
+import parser.program_components.parameters.ReassignedParameter;
 import parser.program_components.statements.AssignmentStatement;
 import parser.utils.MockedExitErrorHandler;
 import parser.utils.MockedLexer;
@@ -45,7 +46,26 @@ public class ParserAssignmentStatementTest {
                                         new Token(new Position(9, 4), TokenTypeEnum.RIGHT_CURLY_BRACKET)
                                 ),
                                 new HashMap<>() {{
-                                    put("func", new FunctionDef("func", TokenTypeEnum.BOOL_KEYWORD, new HashMap<>(), new CodeBlock(List.of(new AssignmentStatement(new Parameter(TokenTypeEnum.INT_KEYWORD, "A"), new IntValue(1))))));
+                                    put("func", new BoolFunctionDef(new Position(1, 1), "func", new HashMap<>(), new CodeBlock(new Position(1, 14), List.of(new AssignmentStatement(new Position(5, 7), new IntParameter(new Position(5, 7), "A"), new IntValue(new Position(8, 14), 1))))));
+                                }}
+                        )
+                ),
+                Arguments.of(
+                        new ParserSingleTestParams(
+                                Arrays.asList(
+                                        new Token(new Position(5, 7), TokenTypeEnum.INT_KEYWORD),
+                                        new StringToken("A", new Position(7, 10), TokenTypeEnum.IDENTIFIER),
+                                        new Token(new Position(8, 4), TokenTypeEnum.ASSIGNMENT_OPERATOR),
+                                        new IntegerToken(1, new Position(8, 14)),
+                                        new Token(new Position(8, 24), TokenTypeEnum.SEMICOLON),
+                                        new StringToken("A", new Position(9, 10), TokenTypeEnum.IDENTIFIER),
+                                        new Token(new Position(10, 4), TokenTypeEnum.ASSIGNMENT_OPERATOR),
+                                        new IntegerToken(11, new Position(10, 14)),
+                                        new Token(new Position(12, 24), TokenTypeEnum.SEMICOLON),
+                                        new Token(new Position(13, 4), TokenTypeEnum.RIGHT_CURLY_BRACKET)
+                                ),
+                                new HashMap<>() {{
+                                    put("func", new BoolFunctionDef(new Position(1, 1), "func", new HashMap<>(), new CodeBlock(new Position(1, 14), List.of(new AssignmentStatement(new Position(5, 7), new IntParameter(new Position(5, 7), "A"), new IntValue(new Position(8, 14), 1)), new AssignmentStatement(new Position(9, 10), new ReassignedParameter(new Position(9, 10), "A"), new IntValue(new Position(10, 14), 11))))));
                                 }}
                         )
                 )
